# repa-sndfile

./: README  README.md  repa-sndfile.cabal
Data/Array/Repa/IO/: Sndfile.hs
Data/Array/Repa/IO/Sndfile/: Examples.hs
Test/: Examples.hs  ReadWrite.hs
example/: gensine.hs  rw.hs
exec/: gensine.hs  rw.hs  tests.hs
tests/: Main.hs
