Name:           repa-sndfile
Version:        2.1.0.0
Synopsis:       Reading and writing sound files with repa arrays
License:        BSD3
License-file:   LICENSE
Author:         <8c6794b6@gmail.com>
Maintainer:     <8c6794b6@gmail.com>
Category:       Data Structures
Build-type:     Simple
Cabal-version:  >=1.2
Description:
  Add supporting of reading and writing audio data with repa arrays in
  various format.
  .
  The code is using libsndfile and hsndfile package.

Extra-source-files:
  example/gensine.hs
  example/rw.hs
  README

flag dev
  description:
    Add developer options
  default:
    False

executable rw
  main-is: example/rw.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all

executable gensine
  main-is: example/gensine.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O2

  Exposed-modules:
    Data.Array.Repa.IO.Sndfile

  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.5.1,
    repa == 2.1.1.5

  if flag(dev)
    build-depends:
      hsndfile-vector >= 0.4.0,
      vector >= 0.7 && < 0.9
    Other-modules:
      Test.ReadWrite

source-repository head
  type: git
  location: https://github.com/8c6794b6/repa-sndfile.git
