Name:           repa-sndfile
Version:        3.1.1.1
Synopsis:       Reading and writing sound files with repa arrays
License:        BSD3
License-file:   LICENSE
Author:         <8c6794b6@gmail.com>
Maintainer:     <8c6794b6@gmail.com>
Category:       Data Structures
Build-type:     Simple
Cabal-version:  >=1.8
Description:
  Add supporting of reading and writing audio data with repa arrays in
  various format.
  .
  The code is using libsndfile and hsndfile package.

Extra-source-files:
  example/gensine.hs
  example/rw.hs
  README

flag dev
  description:
    Add developer options
  default:
    False

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O3 -fllvm -optl-O3
  ghc-prof-options:
    -caf-all -auto-all

  Exposed-modules:
    Data.Array.Repa.IO.Sndfile

  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.5.2 && < 1.0,
    repa >= 3.1.1 && < 3.2

  if flag(dev)
    build-depends:
      hsndfile-vector >= 0.5.2,
      vector >= 0.9 && < 1.0
    Other-modules:
      Test.ReadWrite

executable rw
  main-is:
    example/rw.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  build-depends:
    base >= 4 && < 5,
    hsndfile >= 0.5.2 && < 1.0,
    hsndfile-vector >= 0.5.2 && < 1.0,
    repa >= 3.1.1 && < 3.2,
    vector >= 0.9 && < 1.0,
    repa-sndfile -any

  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
  ghc-prof-options:
    -caf-all -auto-all

executable gensine
  hs-source-dirs:
    example
  main-is:
    gensine.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  build-depends:
    base >= 4 && < 5,
    hsndfile >= 0.5.2 && < 1.0,
    hsndfile-vector >= 0.5.2 && < 1.0,
    vector >= 0.9 && < 1.0,
    repa >= 3.1.1 && < 3.2,
    repa-sndfile -any
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O3 -fllvm -optl-O3
  ghc-prof-options:
    -caf-all -auto-all

source-repository head
  type: git
  location: https://github.com/8c6794b6/repa-sndfile.git
