Name:           repa-sndfile
Version:        3.2.3.2
Synopsis:       Reading and writing sound files with repa arrays
License:        BSD3
License-file:   LICENSE
Author:         <8c6794b6@gmail.com>
Maintainer:     <8c6794b6@gmail.com>
Category:       Data Structures
Build-type:     Simple
Cabal-version:  >=1.8
Description:
  Add supporting of reading and writing audio data with repa arrays in
  various format.
  .
  The code is using libsndfile and hsndfile package.

Extra-source-files:
  example/gensine.hs
  example/rw.hs
  README.md

flag dev
  description:
    Add developer options
  default:
    False

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O3 -fllvm -optl-O3
  ghc-prof-options:
    -caf-all -auto-all
  Exposed-modules:
    Data.Array.Repa.IO.Sndfile
  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.7.1,
    repa == 3.2.3.*
  if flag(dev)
    build-depends:
      hsndfile-vector >= 0.5.2,
      vector >= 0.9
    Exposed-modules:
      Test.ReadWrite

executable rw
  hs-source-dirs:
    example
  main-is:
    rw.hs
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
  ghc-prof-options:
    -caf-all -auto-all
  if flag(dev)
    buildable: True
  else
    buildable: False
  build-depends:
    base >= 4 && < 5,
    hsndfile >= 0.7.1,
    hsndfile-vector >= 0.5.2,
    repa >= 3.2.3,
    vector >= 0.9,
    repa-sndfile -any

executable gensine
  hs-source-dirs:
    example
  main-is:
    gensine.hs
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O3 -fllvm -optl-O3
  ghc-prof-options:
    -caf-all -auto-all
  if flag(dev)
    buildable: True
  else
    buildable: False
  build-depends:
    base >= 4 && < 5,
    hsndfile >= 0.7.1,
    hsndfile-vector >= 0.5.2,
    vector >= 0.9,
    repa == 3.2.3.*,
    repa-sndfile -any

source-repository head
  type: git
  location: https://github.com/8c6794b6/repa-sndfile.git
